generator client {
  provider      = "prisma-client-js"
  // "native" = local dev; the musl target is for the Alpine (node:20-alpine)
  // production image so the correct query engine is bundled at build time.
  binaryTargets = ["native", "linux-musl-openssl-3.0.x"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Tenant {
  id                String                   @id @default(uuid())
  name              String
  slug              String                   @unique
  domain            String?                  @unique
  plan              PlanType                 @default(STARTER)
  isActive          Boolean                  @default(true)
  logoUrl           String?
  settings          Json                     @default("{}")
  createdAt         DateTime                 @default(now())
  updatedAt         DateTime                 @updatedAt
  auditLogs         AuditLog[]
  accounts          ChartOfAccount[]
  dashboards        Dashboard[]
  employees         Employee[]
  forecasts         Forecast[]
  inventoryItems    InventoryItem[]
  invoices          Invoice[]
  journalEntries    JournalEntry[]
  notificationPrefs NotificationPreference[]
  notifications     Notification[]
  payrollRuns       PayrollRun[]
  projects          Project[]
  purchaseOrders    PurchaseOrder[]
  roles             Role[]
  users             User[]
  vendors           Vendor[]
  webhooks          Webhook[]

  @@map("tenants")
}

model User {
  id                String                   @id @default(uuid())
  tenantId          String
  email             String
  passwordHash      String
  firstName         String
  lastName          String
  avatarUrl         String?
  phone             String?
  isActive          Boolean                  @default(true)
  mfaEnabled        Boolean                  @default(false)
  mfaSecret         String?
  lastLoginAt       DateTime?
  createdAt         DateTime                 @default(now())
  updatedAt         DateTime                 @updatedAt
  deletedAt         DateTime?
  auditLogs         AuditLog[]
  employee          Employee?
  approvedInvoices  Invoice[]                @relation("ApprovedByUser")
  createdEntries    JournalEntry[]           @relation("CreatedByUser")
  notificationPrefs NotificationPreference[]
  notifications     Notification[]
  assignedTasks     ProjectTask[]            @relation("TaskAssignedToUser")
  sessions          Session[]
  userRoles         UserRole[]
  tenant            Tenant                   @relation(fields: [tenantId], references: [id])

  @@unique([tenantId, email])
  @@index([tenantId])
  @@index([email])
  @@map("users")
}

model Role {
  id          String           @id @default(uuid())
  tenantId    String
  name        String
  description String?
  isSystem    Boolean          @default(false)
  createdAt   DateTime         @default(now())
  updatedAt   DateTime         @updatedAt
  permissions RolePermission[]
  tenant      Tenant           @relation(fields: [tenantId], references: [id])
  userRoles   UserRole[]

  @@unique([tenantId, name])
  @@map("roles")
}

model UserRole {
  id     String @id @default(uuid())
  userId String
  roleId String
  role   Role   @relation(fields: [roleId], references: [id])
  user   User   @relation(fields: [userId], references: [id])

  @@unique([userId, roleId])
  @@map("user_roles")
}

model Permission {
  id              String           @id @default(uuid())
  resource        String
  action          String
  description     String?
  rolePermissions RolePermission[]

  @@unique([resource, action])
  @@map("permissions")
}

model RolePermission {
  id           String     @id @default(uuid())
  roleId       String
  permissionId String
  permission   Permission @relation(fields: [permissionId], references: [id])
  role         Role       @relation(fields: [roleId], references: [id])

  @@unique([roleId, permissionId])
  @@map("role_permissions")
}

model Session {
  id           String   @id @default(uuid())
  userId       String
  refreshToken String   @unique
  ipAddress    String?
  userAgent    String?
  expiresAt    DateTime
  createdAt    DateTime @default(now())
  user         User     @relation(fields: [userId], references: [id])

  @@index([userId])
  @@map("sessions")
}

model ChartOfAccount {
  id            String             @id @default(uuid())
  tenantId      String
  code          String
  name          String
  type          AccountType
  subType       String?
  currency      String             @default("USD")
  isActive      Boolean            @default(true)
  parentId      String?
  description   String?
  createdAt     DateTime           @default(now())
  updatedAt     DateTime           @updatedAt
  parent        ChartOfAccount?    @relation("AccountHierarchy", fields: [parentId], references: [id])
  children      ChartOfAccount[]   @relation("AccountHierarchy")
  tenant        Tenant             @relation(fields: [tenantId], references: [id])
  creditEntries JournalEntryLine[] @relation("CreditAccount")
  debitEntries  JournalEntryLine[] @relation("DebitAccount")

  @@unique([tenantId, code])
  @@index([tenantId])
  @@map("chart_of_accounts")
}

model AccountingPeriod {
  id             String         @id @default(uuid())
  tenantId       String
  name           String
  startDate      DateTime
  endDate        DateTime
  status         PeriodStatus   @default(OPEN)
  closedAt       DateTime?
  closedBy       String?
  createdAt      DateTime       @default(now())
  journalEntries JournalEntry[]

  @@index([tenantId])
  @@map("accounting_periods")
}

model JournalEntry {
  id          String             @id @default(uuid())
  tenantId    String
  entryNumber String
  periodId    String?
  date        DateTime
  description String
  reference   String?
  status      JournalEntryStatus @default(DRAFT)
  totalDebit  Decimal            @db.Decimal(18, 2)
  totalCredit Decimal            @db.Decimal(18, 2)
  createdBy   String
  postedAt    DateTime?
  reversedAt  DateTime?
  reversalId  String?
  createdAt   DateTime           @default(now())
  updatedAt   DateTime           @updatedAt
  creator     User               @relation("CreatedByUser", fields: [createdBy], references: [id])
  period      AccountingPeriod?  @relation(fields: [periodId], references: [id])
  tenant      Tenant             @relation(fields: [tenantId], references: [id])
  lines       JournalEntryLine[]

  @@unique([tenantId, entryNumber])
  @@index([tenantId, date])
  @@map("journal_entries")
}

model JournalEntryLine {
  id              String          @id @default(uuid())
  journalEntryId  String
  debitAccountId  String?
  creditAccountId String?
  amount          Decimal         @db.Decimal(18, 2)
  currency        String          @default("USD")
  description     String?
  lineNumber      Int
  creditAccount   ChartOfAccount? @relation("CreditAccount", fields: [creditAccountId], references: [id])
  debitAccount    ChartOfAccount? @relation("DebitAccount", fields: [debitAccountId], references: [id])
  journalEntry    JournalEntry    @relation(fields: [journalEntryId], references: [id], onDelete: Cascade)

  @@index([journalEntryId])
  @@map("journal_entry_lines")
}

model CurrencyRate {
  id           String   @id @default(uuid())
  fromCurrency String
  toCurrency   String
  rate         Decimal  @db.Decimal(18, 6)
  date         DateTime
  source       String   @default("ECB")
  createdAt    DateTime @default(now())

  @@unique([fromCurrency, toCurrency, date])
  @@index([date])
  @@map("currency_rates")
}

model Invoice {
  id              String            @id @default(uuid())
  tenantId        String
  type            InvoiceType
  invoiceNumber   String
  vendorId        String?
  customerId      String?
  purchaseOrderId String?
  amount          Decimal           @db.Decimal(18, 2)
  taxAmount       Decimal           @default(0) @db.Decimal(18, 2)
  totalAmount     Decimal           @db.Decimal(18, 2)
  currency        String            @default("USD")
  issueDate       DateTime
  dueDate         DateTime
  status          InvoiceStatus     @default(DRAFT)
  ocrData         Json?
  ocrConfidence   Decimal?          @db.Decimal(5, 2)
  matchingStatus  MatchingStatus    @default(PENDING)
  approvedBy      String?
  approvedAt      DateTime?
  paidAt          DateTime?
  notes           String?
  attachmentUrl   String?
  createdAt       DateTime          @default(now())
  updatedAt       DateTime          @updatedAt
  deletedAt       DateTime?
  lineItems       InvoiceLineItem[]
  approver        User?             @relation("ApprovedByUser", fields: [approvedBy], references: [id])
  purchaseOrder   PurchaseOrder?    @relation(fields: [purchaseOrderId], references: [id])
  tenant          Tenant            @relation(fields: [tenantId], references: [id])
  vendor          Vendor?           @relation(fields: [vendorId], references: [id])
  payments        Payment[]

  @@unique([tenantId, invoiceNumber])
  @@index([tenantId, type, status])
  @@index([tenantId, dueDate])
  @@map("invoices")
}

model InvoiceLineItem {
  id          String  @id @default(uuid())
  invoiceId   String
  description String
  quantity    Decimal @db.Decimal(10, 2)
  unitPrice   Decimal @db.Decimal(18, 2)
  totalPrice  Decimal @db.Decimal(18, 2)
  taxRate     Decimal @default(0) @db.Decimal(5, 2)
  accountId   String?
  invoice     Invoice @relation(fields: [invoiceId], references: [id], onDelete: Cascade)

  @@map("invoice_line_items")
}

model Payment {
  id          String        @id @default(uuid())
  tenantId    String
  invoiceId   String
  amount      Decimal       @db.Decimal(18, 2)
  currency    String        @default("USD")
  method      PaymentMethod
  reference   String?
  paymentDate DateTime
  status      PaymentStatus @default(PENDING)
  createdAt   DateTime      @default(now())
  invoice     Invoice       @relation(fields: [invoiceId], references: [id])

  @@index([invoiceId])
  @@map("payments")
}

model Department {
  id        String       @id @default(uuid())
  tenantId  String
  name      String
  code      String?
  managerId String?
  parentId  String?
  createdAt DateTime     @default(now())
  parent    Department?  @relation("DeptHierarchy", fields: [parentId], references: [id])
  children  Department[] @relation("DeptHierarchy")
  employees Employee[]

  @@unique([tenantId, name])
  @@map("departments")
}

model Employee {
  id               String            @id @default(uuid())
  tenantId         String
  userId           String            @unique
  employeeCode     String
  departmentId     String?
  designation      String
  managerId        String?
  employmentType   EmploymentType    @default(FULL_TIME)
  status           EmployeeStatus    @default(ACTIVE)
  joinDate         DateTime
  terminationDate  DateTime?
  baseSalary       Decimal           @db.Decimal(18, 2)
  currency         String            @default("USD")
  payFrequency     PayFrequency      @default(MONTHLY)
  dateOfBirth      DateTime?
  gender           String?
  nationality      String?
  taxId            String?
  bankAccount      String?
  bankName         String?
  bankIfsc         String?
  address          Json?
  emergencyContact Json?
  createdAt        DateTime          @default(now())
  updatedAt        DateTime          @updatedAt
  deletedAt        DateTime?
  attendances      Attendance[]
  department       Department?       @relation(fields: [departmentId], references: [id])
  manager          Employee?         @relation("OrgHierarchy", fields: [managerId], references: [id])
  reportees        Employee[]        @relation("OrgHierarchy")
  tenant           Tenant            @relation(fields: [tenantId], references: [id])
  user             User              @relation(fields: [userId], references: [id])
  leaveRequests    LeaveRequest[]
  payslips         Payslip[]
  projectResources ProjectResource[]
  taskAssignments  ProjectTask[]     @relation("TaskAssignedToEmployee")

  @@unique([tenantId, employeeCode])
  @@index([tenantId])
  @@map("employees")
}

model LeaveType {
  id                 String         @id @default(uuid())
  tenantId           String
  name               String
  daysAllowedPerYear Int
  carryForward       Boolean        @default(false)
  maxCarryForward    Int?
  isPaid             Boolean        @default(true)
  createdAt          DateTime       @default(now())
  leaveRequests      LeaveRequest[]

  @@unique([tenantId, name])
  @@map("leave_types")
}

model LeaveRequest {
  id             String      @id @default(uuid())
  employeeId     String
  leaveTypeId    String
  startDate      DateTime
  endDate        DateTime
  totalDays      Decimal     @db.Decimal(4, 1)
  reason         String?
  status         LeaveStatus @default(PENDING)
  approvedBy     String?
  approvedAt     DateTime?
  rejectedReason String?
  createdAt      DateTime    @default(now())
  updatedAt      DateTime    @updatedAt
  employee       Employee    @relation(fields: [employeeId], references: [id])
  leaveType      LeaveType   @relation(fields: [leaveTypeId], references: [id])

  @@index([employeeId])
  @@map("leave_requests")
}

model Attendance {
  id            String           @id @default(uuid())
  employeeId    String
  date          DateTime         @db.Date
  clockIn       DateTime?
  clockOut      DateTime?
  totalHours    Decimal?         @db.Decimal(4, 2)
  overtimeHours Decimal?         @db.Decimal(4, 2)
  status        AttendanceStatus @default(PRESENT)
  notes         String?
  createdAt     DateTime         @default(now())
  employee      Employee         @relation(fields: [employeeId], references: [id])

  @@unique([employeeId, date])
  @@index([employeeId, date])
  @@map("attendances")
}

model PayrollRun {
  id              String        @id @default(uuid())
  tenantId        String
  period          String
  status          PayrollStatus @default(DRAFT)
  totalEmployees  Int           @default(0)
  totalGross      Decimal       @default(0) @db.Decimal(18, 2)
  totalDeductions Decimal       @default(0) @db.Decimal(18, 2)
  totalNet        Decimal       @default(0) @db.Decimal(18, 2)
  currency        String        @default("USD")
  processedAt     DateTime?
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt
  tenant          Tenant        @relation(fields: [tenantId], references: [id])
  payslips        Payslip[]

  @@unique([tenantId, period])
  @@map("payroll_runs")
}

model Payslip {
  id              String     @id @default(uuid())
  payrollRunId    String
  employeeId      String
  basicSalary     Decimal    @db.Decimal(18, 2)
  allowances      Json       @default("{}")
  totalAllowances Decimal    @default(0) @db.Decimal(18, 2)
  grossSalary     Decimal    @db.Decimal(18, 2)
  deductions      Json       @default("{}")
  totalDeductions Decimal    @default(0) @db.Decimal(18, 2)
  netSalary       Decimal    @db.Decimal(18, 2)
  currency        String     @default("USD")
  pdfUrl          String?
  createdAt       DateTime   @default(now())
  employee        Employee   @relation(fields: [employeeId], references: [id])
  payrollRun      PayrollRun @relation(fields: [payrollRunId], references: [id])

  @@unique([payrollRunId, employeeId])
  @@map("payslips")
}

model Vendor {
  id             String          @id @default(uuid())
  tenantId       String
  name           String
  code           String
  email          String?
  phone          String?
  website        String?
  taxId          String?
  paymentTerms   Int             @default(30)
  currency       String          @default("USD")
  rating         Decimal?        @db.Decimal(3, 2)
  status         VendorStatus    @default(ACTIVE)
  address        Json?
  bankDetails    Json?
  createdAt      DateTime        @default(now())
  updatedAt      DateTime        @updatedAt
  deletedAt      DateTime?
  inventoryItems InventoryItem[]
  invoices       Invoice[]
  purchaseOrders PurchaseOrder[]
  tenant         Tenant          @relation(fields: [tenantId], references: [id])

  @@unique([tenantId, code])
  @@index([tenantId])
  @@map("vendors")
}

model PurchaseOrder {
  id               String         @id @default(uuid())
  tenantId         String
  poNumber         String
  vendorId         String
  requestedBy      String?
  approvedBy       String?
  status           POStatus       @default(DRAFT)
  currency         String         @default("USD")
  subtotal         Decimal        @db.Decimal(18, 2)
  taxAmount        Decimal        @default(0) @db.Decimal(18, 2)
  totalAmount      Decimal        @db.Decimal(18, 2)
  expectedDelivery DateTime?
  deliveredAt      DateTime?
  notes            String?
  createdAt        DateTime       @default(now())
  updatedAt        DateTime       @updatedAt
  goodsReceipts    GoodsReceipt[]
  invoices         Invoice[]
  lineItems        POLineItem[]
  tenant           Tenant         @relation(fields: [tenantId], references: [id])
  vendor           Vendor         @relation(fields: [vendorId], references: [id])

  @@unique([tenantId, poNumber])
  @@index([tenantId, status])
  @@map("purchase_orders")
}

model POLineItem {
  id              String         @id @default(uuid())
  purchaseOrderId String
  inventoryItemId String?
  description     String
  quantity        Decimal        @db.Decimal(10, 2)
  unitPrice       Decimal        @db.Decimal(18, 2)
  totalPrice      Decimal        @db.Decimal(18, 2)
  receivedQty     Decimal        @default(0) @db.Decimal(10, 2)
  inventoryItem   InventoryItem? @relation(fields: [inventoryItemId], references: [id])
  purchaseOrder   PurchaseOrder  @relation(fields: [purchaseOrderId], references: [id], onDelete: Cascade)

  @@map("po_line_items")
}

model GoodsReceipt {
  id              String             @id @default(uuid())
  purchaseOrderId String
  receivedBy      String?
  receiptDate     DateTime
  notes           String?
  createdAt       DateTime           @default(now())
  lineItems       GoodsReceiptLine[]
  purchaseOrder   PurchaseOrder      @relation(fields: [purchaseOrderId], references: [id])

  @@map("goods_receipts")
}

model GoodsReceiptLine {
  id              String       @id @default(uuid())
  goodsReceiptId  String
  inventoryItemId String?
  description     String
  orderedQty      Decimal      @db.Decimal(10, 2)
  receivedQty     Decimal      @db.Decimal(10, 2)
  goodsReceipt    GoodsReceipt @relation(fields: [goodsReceiptId], references: [id], onDelete: Cascade)

  @@map("goods_receipt_lines")
}

model InventoryItem {
  id                String          @id @default(uuid())
  tenantId          String
  sku               String
  name              String
  description       String?
  category          String?
  unitOfMeasure     String          @default("PCS")
  costingMethod     CostingMethod   @default(FIFO)
  unitCost          Decimal         @db.Decimal(18, 2)
  sellingPrice      Decimal?        @db.Decimal(18, 2)
  quantityOnHand    Decimal         @default(0) @db.Decimal(10, 2)
  quantityOnOrder   Decimal         @default(0) @db.Decimal(10, 2)
  reorderPoint      Decimal         @default(0) @db.Decimal(10, 2)
  reorderQty        Decimal         @default(0) @db.Decimal(10, 2)
  warehouseLocation String?
  preferredVendorId String?
  isActive          Boolean         @default(true)
  createdAt         DateTime        @default(now())
  updatedAt         DateTime        @updatedAt
  forecasts         Forecast[]
  preferredVendor   Vendor?         @relation(fields: [preferredVendorId], references: [id])
  tenant            Tenant          @relation(fields: [tenantId], references: [id])
  poLineItems       POLineItem[]
  stockMovements    StockMovement[]

  @@unique([tenantId, sku])
  @@index([tenantId])
  @@map("inventory_items")
}

model StockMovement {
  id              String        @id @default(uuid())
  inventoryItemId String
  type            MovementType
  quantity        Decimal       @db.Decimal(10, 2)
  unitCost        Decimal?      @db.Decimal(18, 2)
  reference       String?
  notes           String?
  createdAt       DateTime      @default(now())
  inventoryItem   InventoryItem @relation(fields: [inventoryItemId], references: [id])

  @@index([inventoryItemId, createdAt])
  @@map("stock_movements")
}

model Forecast {
  id              String        @id @default(uuid())
  tenantId        String
  inventoryItemId String
  modelType       String        @default("PROPHET")
  modelVersion    String?
  forecastDate    DateTime
  forecastPeriod  String
  predictedQty    Decimal       @db.Decimal(10, 2)
  confidenceLow   Decimal?      @db.Decimal(10, 2)
  confidenceHigh  Decimal?      @db.Decimal(10, 2)
  mape            Decimal?      @db.Decimal(6, 3)
  actualQty       Decimal?      @db.Decimal(10, 2)
  createdAt       DateTime      @default(now())
  inventoryItem   InventoryItem @relation(fields: [inventoryItemId], references: [id])
  tenant          Tenant        @relation(fields: [tenantId], references: [id])

  @@index([tenantId, inventoryItemId, forecastPeriod])
  @@map("forecasts")
}

model Project {
  id          String             @id @default(uuid())
  tenantId    String
  name        String
  code        String
  description String?
  status      ProjectStatus      @default(PLANNING)
  startDate   DateTime?
  endDate     DateTime?
  budget      Decimal            @default(0) @db.Decimal(18, 2)
  actualCost  Decimal            @default(0) @db.Decimal(18, 2)
  currency    String             @default("USD")
  managerId   String?
  clientName  String?
  createdAt   DateTime           @default(now())
  updatedAt   DateTime           @updatedAt
  deletedAt   DateTime?
  milestones  ProjectMilestone[]
  resources   ProjectResource[]
  tasks       ProjectTask[]
  tenant      Tenant             @relation(fields: [tenantId], references: [id])

  @@unique([tenantId, code])
  @@index([tenantId])
  @@map("projects")
}

model ProjectMilestone {
  id          String          @id @default(uuid())
  projectId   String
  name        String
  description String?
  dueDate     DateTime
  status      MilestoneStatus @default(PENDING)
  completedAt DateTime?
  createdAt   DateTime        @default(now())
  project     Project         @relation(fields: [projectId], references: [id], onDelete: Cascade)
  tasks       ProjectTask[]

  @@map("project_milestones")
}

model ProjectTask {
  id                   String            @id @default(uuid())
  projectId            String
  milestoneId          String?
  parentTaskId         String?
  title                String
  description          String?
  status               TaskStatus        @default(TODO)
  priority             Priority          @default(MEDIUM)
  estimatedHours       Decimal?          @db.Decimal(6, 2)
  actualHours          Decimal?          @db.Decimal(6, 2)
  startDate            DateTime?
  dueDate              DateTime?
  completedAt          DateTime?
  createdAt            DateTime          @default(now())
  updatedAt            DateTime          @updatedAt
  assignedToEmployeeId String?
  assignedToUserId     String?
  employeeAssignee     Employee?         @relation("TaskAssignedToEmployee", fields: [assignedToEmployeeId], references: [id])
  assignee             User?             @relation("TaskAssignedToUser", fields: [assignedToUserId], references: [id])
  milestone            ProjectMilestone? @relation(fields: [milestoneId], references: [id])
  parentTask           ProjectTask?      @relation("TaskHierarchy", fields: [parentTaskId], references: [id])
  subTasks             ProjectTask[]     @relation("TaskHierarchy")
  project              Project           @relation(fields: [projectId], references: [id], onDelete: Cascade)

  @@index([projectId])
  @@map("project_tasks")
}

model ProjectResource {
  id         String    @id @default(uuid())
  projectId  String
  employeeId String
  role       String?
  allocation Decimal   @db.Decimal(5, 2)
  startDate  DateTime?
  endDate    DateTime?
  createdAt  DateTime  @default(now())
  employee   Employee  @relation(fields: [employeeId], references: [id])
  project    Project   @relation(fields: [projectId], references: [id], onDelete: Cascade)

  @@unique([projectId, employeeId])
  @@map("project_resources")
}

model Dashboard {
  id          String   @id @default(uuid())
  tenantId    String
  name        String
  description String?
  createdBy   String
  isPublic    Boolean  @default(false)
  layout      Json     @default("[]")
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  tenant      Tenant   @relation(fields: [tenantId], references: [id])
  widgets     Widget[]

  @@index([tenantId])
  @@map("dashboards")
}

model Widget {
  id              String     @id @default(uuid())
  dashboardId     String
  title           String
  type            WidgetType
  dataSource      String
  config          Json       @default("{}")
  position        Json       @default("{}")
  refreshInterval Int?
  createdAt       DateTime   @default(now())
  updatedAt       DateTime   @updatedAt
  dashboard       Dashboard  @relation(fields: [dashboardId], references: [id], onDelete: Cascade)

  @@map("widgets")
}

model ScheduledReport {
  id          String       @id @default(uuid())
  tenantId    String
  name        String
  description String?
  reportType  String
  format      ReportFormat @default(PDF)
  schedule    String
  recipients  String[]
  config      Json         @default("{}")
  lastRunAt   DateTime?
  nextRunAt   DateTime?
  isActive    Boolean      @default(true)
  createdAt   DateTime     @default(now())

  @@index([tenantId])
  @@map("scheduled_reports")
}

model AuditLog {
  id         String   @id @default(uuid())
  tenantId   String
  userId     String?
  action     String
  resource   String
  resourceId String?
  oldValues  Json?
  newValues  Json?
  ipAddress  String?
  userAgent  String?
  hash       String?
  createdAt  DateTime @default(now())
  tenant     Tenant   @relation(fields: [tenantId], references: [id])
  user       User?    @relation(fields: [userId], references: [id])

  @@index([tenantId, resource, createdAt])
  @@index([tenantId, userId, createdAt])
  @@map("audit_logs")
}

model Notification {
  id          String              @id @default(uuid())
  tenantId    String
  userId      String
  title       String
  message     String
  type        NotificationType
  channel     NotificationChannel
  event       String
  resourceId  String?
  isRead      Boolean             @default(false)
  readAt      DateTime?
  deliveredAt DateTime?
  failedAt    DateTime?
  retryCount  Int                 @default(0)
  createdAt   DateTime            @default(now())
  tenant      Tenant              @relation(fields: [tenantId], references: [id])
  user        User                @relation(fields: [userId], references: [id])

  @@index([tenantId, userId, isRead])
  @@index([tenantId, createdAt])
  @@map("notifications")
}

model NotificationPreference {
  id        String   @id @default(uuid())
  tenantId  String
  userId    String
  event     String
  inApp     Boolean  @default(true)
  email     Boolean  @default(true)
  sms       Boolean  @default(false)
  webhook   Boolean  @default(false)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  tenant    Tenant   @relation(fields: [tenantId], references: [id])
  user      User     @relation(fields: [userId], references: [id])

  @@unique([tenantId, userId, event])
  @@map("notification_preferences")
}

model Webhook {
  id         String            @id @default(uuid())
  tenantId   String
  name       String
  url        String
  secret     String
  events     String[]
  isActive   Boolean           @default(true)
  lastUsedAt DateTime?
  createdAt  DateTime          @default(now())
  updatedAt  DateTime          @updatedAt
  deliveries WebhookDelivery[]
  tenant     Tenant            @relation(fields: [tenantId], references: [id])

  @@index([tenantId])
  @@map("webhooks")
}

model WebhookDelivery {
  id          String    @id @default(uuid())
  webhookId   String
  event       String
  payload     Json
  statusCode  Int?
  response    String?
  attempt     Int       @default(1)
  succeededAt DateTime?
  failedAt    DateTime?
  createdAt   DateTime  @default(now())
  webhook     Webhook   @relation(fields: [webhookId], references: [id])

  @@index([webhookId])
  @@map("webhook_deliveries")
}

model SyncQueue {
  id        String     @id @default(uuid())
  tenantId  String
  userId    String
  operation String
  resource  String
  payload   Json
  status    SyncStatus @default(PENDING)
  syncedAt  DateTime?
  errorMsg  String?
  createdAt DateTime   @default(now())

  @@index([tenantId, userId, status])
  @@map("sync_queue")
}

enum PlanType {
  STARTER
  PROFESSIONAL
  ENTERPRISE
}

enum AccountType {
  ASSET
  LIABILITY
  EQUITY
  REVENUE
  EXPENSE
}

enum PeriodStatus {
  OPEN
  LOCKED
  CLOSED
}

enum JournalEntryStatus {
  DRAFT
  POSTED
  REVERSED
}

enum InvoiceType {
  AP
  AR
}

enum InvoiceStatus {
  DRAFT
  PENDING
  APPROVED
  PARTIALLY_PAID
  PAID
  OVERDUE
  CANCELLED
}

enum MatchingStatus {
  PENDING
  MATCHED
  MISMATCHED
  EXCEPTION
}

enum PaymentMethod {
  BANK_TRANSFER
  CHEQUE
  CARD
  CASH
  CRYPTO
}

enum PaymentStatus {
  PENDING
  COMPLETED
  FAILED
  REFUNDED
}

enum EmploymentType {
  FULL_TIME
  PART_TIME
  CONTRACT
  INTERN
}

enum EmployeeStatus {
  ACTIVE
  ON_LEAVE
  SUSPENDED
  TERMINATED
}

enum PayFrequency {
  WEEKLY
  BI_WEEKLY
  MONTHLY
  QUARTERLY
}

enum LeaveStatus {
  PENDING
  APPROVED
  REJECTED
  CANCELLED
}

enum AttendanceStatus {
  PRESENT
  ABSENT
  HALF_DAY
  HOLIDAY
  WORK_FROM_HOME
}

enum PayrollStatus {
  DRAFT
  PROCESSING
  COMPLETED
  FAILED
  CANCELLED
}

enum VendorStatus {
  ACTIVE
  INACTIVE
  BLACKLISTED
}

enum POStatus {
  DRAFT
  SENT
  ACKNOWLEDGED
  PARTIALLY_RECEIVED
  RECEIVED
  CANCELLED
}

enum CostingMethod {
  FIFO
  LIFO
  WEIGHTED_AVERAGE
}

enum MovementType {
  IN
  OUT
  ADJUSTMENT
  TRANSFER
}

enum ProjectStatus {
  PLANNING
  ACTIVE
  ON_HOLD
  COMPLETED
  CANCELLED
}

enum MilestoneStatus {
  PENDING
  IN_PROGRESS
  COMPLETED
  DELAYED
}

enum TaskStatus {
  TODO
  IN_PROGRESS
  IN_REVIEW
  COMPLETED
  CANCELLED
}

enum Priority {
  LOW
  MEDIUM
  HIGH
  CRITICAL
}

enum WidgetType {
  BAR_CHART
  LINE_CHART
  PIE_CHART
  METRIC_CARD
  TABLE
  HEATMAP
  FUNNEL
  GANTT
}

enum ReportFormat {
  PDF
  EXCEL
  CSV
}

enum NotificationType {
  INFO
  SUCCESS
  WARNING
  ERROR
}

enum NotificationChannel {
  IN_APP
  EMAIL
  SMS
  WEBHOOK
}

enum SyncStatus {
  PENDING
  SYNCED
  FAILED
}
