@startuml Amdox-ERP-Class
title Amdox ERP — Class Diagram (Core Domain)
skinparam classAttributeIconSize 0
skinparam shadowing false

' How to read this: Tenant is the top of everything — every other record
' belongs to exactly one Tenant (that's multi-tenancy). A User gets Roles,
' each Role grants Permissions (resource:action). The rest are the business
' entities. "*--" = "owns / composed of"; "many--many" uses a join table.

class Tenant {
  +id: UUID
  +name: string
  +slug: string
  +plan: PlanType
  +isActive: boolean
}

class User {
  +id: UUID
  +tenantId: UUID
  +email: string
  +passwordHash: string
  +mfaEnabled: boolean
  --
  +login()
  +changePassword()
}

class Role {
  +id: UUID
  +name: string  '' e.g. finance_manager
  +isSystem: boolean
}

class Permission {
  +id: UUID
  +resource: string  '' finance, hr, supply_chain...
  +action: string    '' read, create, approve...
}

class Employee {
  +id: UUID
  +employeeCode: string
  +baseSalary: Decimal
}

class Invoice {
  +id: UUID
  +invoiceNumber: string
  +type: InvoiceType      '' AP or AR
  +totalAmount: Decimal
  +status: InvoiceStatus
}

class Payment {
  +id: UUID
  +amount: Decimal
  +method: PaymentMethod
}

class Vendor {
  +id: UUID
  +code: string
  +name: string
}

class PurchaseOrder {
  +id: UUID
  +poNumber: string
  +status: POStatus
}

class InventoryItem {
  +id: UUID
  +sku: string
  +quantityOnHand: Decimal
  +reorderPoint: Decimal
}

class StockMovement {
  +id: UUID
  +type: MovementType   '' IN / OUT
  +quantity: Decimal
}

class Forecast {
  +id: UUID
  +modelType: string    '' LSTM / PROPHET
  +predictedQty: Decimal
  +mape: Decimal
}

' ── Identity & access ──
Tenant "1" *-- "many" User
Tenant "1" *-- "many" Role
User "many" -- "many" Role : UserRole
Role "many" -- "many" Permission : RolePermission
User "1" -- "0..1" Employee

' ── Finance ──
Tenant "1" *-- "many" Invoice
Invoice "1" *-- "many" Payment

' ── Supply chain ──
Tenant "1" *-- "many" Vendor
Tenant "1" *-- "many" InventoryItem
Vendor "1" -- "many" PurchaseOrder
PurchaseOrder "many" -- "many" InventoryItem : POLineItem
InventoryItem "1" *-- "many" StockMovement
InventoryItem "1" *-- "many" Forecast

note top of Tenant
  Every row in every table carries a
  tenantId. Queries filter by it, so
  companies never see each other's data.
end note
@enduml
